hosts/edge/etc/iptables/rules.v4
# Generated by iptables-save v1.4.21 on Mon Oct  3 11:53:04 2016
*nat
:PREROUTING ACCEPT [10990:1378133]
:INPUT ACCEPT [4859:823528]
:OUTPUT ACCEPT [9566:715990]
:POSTROUTING ACCEPT [47:12766]
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Mon Oct  3 11:53:04 2016
# Generated by iptables-save v1.4.21 on Mon Oct  3 11:53:04 2016
*filter
:INPUT ACCEPT [13:1578]
:FORWARD DROP [5:260]
:OUTPUT ACCEPT [6:477]
-A INPUT -p icmp -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --dport 67:68 -j ACCEPT
-A INPUT ! -s 10.73.17.10/32 -p tcp -m tcp --dport 22 -j REJECT --reject-with icmp-port-unreachable
-A INPUT -i eth0 -j DROP
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 10.73.17.0/24 -i eth1 -o eth0 -m conntrack --ctstate NEW -j ACCEPT
COMMIT
# Completed on Mon Oct  3 11:53:04 2016
